# agentic-visualiser

./: Cargo.toml
.claude/: settings.json
.claude/hooks/: launch-visualizer.sh  visualizer-hook.sh
src/: components.rs  events.rs  main.rs  resources.rs  sprites.rs
src/systems/: agent.rs  animation.rs  event_reader.rs  mod.rs  movement.rs  ui.rs
