[package]
name = "agentic-visualiser"
version = "0.2.0"
edition = "2024"
description = "A Gather Town-style 2D visualizer for Claude Code's agentic behavior"
authors = ["huiliang"]

[dependencies]
# Game engine
bevy = "0.15"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File watching
notify = "7"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Utility
dirs = "6"
anyhow = "1"
rand = "0.8"
